Generate new search api
