# cmd/mb3server/src/model_search.go
@@ -1,0 +1,48 @@
+/*
+ * MassBank3 API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 3.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package mb3server
+
+type Search struct {
+	Filters SearchFilters `json:"Filters,omitempty"`
+
+	Compound map[string]interface{} `json:"Compound,omitempty"`
+
+	Spectra SearchSpectra `json:"Spectra,omitempty"`
+
+	Parameters map[string]interface{} `json:"Parameters,omitempty"`
+
+	Similarity SearchSimilarity `json:"Similarity,omitempty"`
+}
+
+// AssertSearchRequired checks if the required fields are not zero-ed
+func AssertSearchRequired(obj Search) error {
+	if err := AssertSearchFiltersRequired(obj.Filters); err != nil {
+		return err
+	}
+	if err := AssertSearchSpectraRequired(obj.Spectra); err != nil {
+		return err
+	}
+	if err := AssertSearchSimilarityRequired(obj.Similarity); err != nil {
+		return err
+	}
+	return nil
+}
+
+// AssertRecurseSearchRequired recursively checks if required fields are not zero-ed in a nested slice.
+// Accepts only nested slice of Search (e.g. [][]Search), otherwise ErrTypeAssertionError is thrown.
+func AssertRecurseSearchRequired(objSlice interface{}) error {
+	return AssertRecurseInterfaceRequired(objSlice, func(obj interface{}) error {
+		aSearch, ok := obj.(Search)
+		if !ok {
+			return ErrTypeAssertionError
+		}
+		return AssertSearchRequired(aSearch)
+	})
+}
