# cmd/mb3server/src/model_search_spectra.go
@@ -1,0 +1,35 @@
+/*
+ * MassBank3 API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 3.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package mb3server
+
+type SearchSpectra struct {
+	Splash string `json:"Splash,omitempty"`
+
+	Peaks []float64 `json:"Peaks,omitempty"`
+
+	PeakDifference []float64 `json:"PeakDifference,omitempty"`
+}
+
+// AssertSearchSpectraRequired checks if the required fields are not zero-ed
+func AssertSearchSpectraRequired(obj SearchSpectra) error {
+	return nil
+}
+
+// AssertRecurseSearchSpectraRequired recursively checks if required fields are not zero-ed in a nested slice.
+// Accepts only nested slice of SearchSpectra (e.g. [][]SearchSpectra), otherwise ErrTypeAssertionError is thrown.
+func AssertRecurseSearchSpectraRequired(objSlice interface{}) error {
+	return AssertRecurseInterfaceRequired(objSlice, func(obj interface{}) error {
+		aSearchSpectra, ok := obj.(SearchSpectra)
+		if !ok {
+			return ErrTypeAssertionError
+		}
+		return AssertSearchSpectraRequired(aSearchSpectra)
+	})
+}
